# affinity_project

./: .gitignore  .gitmodules  README.md  environment_full.yaml  environment_setup.sh  main.py  pyproject.toml  requirements.txt
affinity/: README.md  (+1 more)
affinity_predictor/: .dockerignore  .gitignore  pyproject.toml
affinity_predictor/.viz/: stats.json
affinity_predictor/06_models/model_checkpoints/version_0/: args.json  events.out.tfevents.1750852995.archlinux.2577860.0  train_config.json
affinity_predictor/06_models/model_checkpoints/version_0/wandb/: latest-run
affinity_predictor/06_models/model_checkpoints/version_1/: args.json  events.out.tfevents.1750853599.archlinux.2578856.0  train_config.json
affinity_predictor/06_models/model_checkpoints/version_1/wandb/: latest-run
affinity_predictor/06_models/model_checkpoints/version_2/: events.out.tfevents.1750854247.archlinux.2588249.0
affinity_predictor/06_models/model_checkpoints/version_2/wandb/run-20250625_142406-36sha1q1/: run-36sha1q1.wandb
affinity_predictor/conf/base/: catalog.yml  parameters.yml  parameters_affinity_prediction.yml
affinity_predictor/data/01_raw/: more_seqeunces.csv
affinity_predictor/data/02_intermediate/: complex_index_df.csv  pdb_index.csv  processed_pdbs.pkl
affinity_predictor/data/05_model_input/: test_items.pkl  train_max_items.pkl  train_min_items.pkl  val_items.pkl
affinity_predictor/data/06_models/model_checkpoints/version_0/: args.json  events.out.tfevents.1750686107.archlinux.2015456.0
affinity_predictor/data/06_models/model_checkpoints/version_2/: args.json  train_config.json
affinity_predictor/data/06_models/model_checkpoints/version_2/wandb/: latest-run
affinity_predictor/data/06_models/test_model/: config.json
affinity_predictor/docker/: Dockerfile
affinity_predictor/notebooks/: 250712_SM_generate_unseen_seqeunces.ipynb  250712_SM_test_infer_items.ipynb
affinity_predictor/notebooks/af3_json_batches/: batch_003.json  batch_004.json  batch_005.json  batch_006.json  batch_008.json  batch_010.json  batch_011.json  batch_012.json  batch_013.json  batch_014.json  batch_016.json  batch_017.json  batch_018.json  batch_019.json  batch_020.json  batch_021.json  batch_022.json  batch_023.json  batch_024.json  batch_026.json  batch_028.json  batch_029.json  batch_030.json  batch_031.json  batch_034.json
affinity_predictor/src/affinity/: __init__.py  __main__.py
affinity_predictor/src/affinity/pipelines/: pseudocode_pipeline.md
affinity_predictor/src/affinity/pipelines/affinity_prediction/: __init__.py  nodes.py  pipeline.py
affinity_predictor/src/affinity_predictor/pipelines/affinity_predictor/: nodes.py  pipeline.py
affinity_predictor/src/dna_positioning/: create_complexes_pdbs.py  create_dna.py  create_env.sh
affinity_predictor/src/preprocessing/: indexing.py  labelling.py  train_test_split.py
affinity_predictor/src/submodules/dna_positioning/: dna_swapping.ipynb
affinity_predictor/src/submodules/dna_positioning/pymol/: .condarc  pymol
affinity_predictor/src/submodules/dna_positioning/pymol/conda-meta/: _openmp_mutex-4.5-2_gnu.json  apbs-1.5-h14c3975_3.json  archspec-0.2.5-pyhd8ed1ab_0.json  biopython-1.85-py311h9ecbd09_1.json  blosc-1.21.6-he440d0b_1.json  bzip2-1.0.8-h4bc722e_7.json  c-ares-1.34.4-hb9d3cd8_0.json  ca-certificates-2025.1.31-hbcca054_0.json  cached-property-1.5.2-hd8ed1ab_1.json  conda-25.1.1-py311h38be061_0.json  conda-package-streaming-0.11.0-pyhd8ed1ab_0.json  cpp-expected-1.1.0-hf52228f_0.json  fmt-11.0.2-h434a139_0.json  font-ttf-inconsolata-3.000-h77eed37_0.json  font-ttf-source-code-pro-2.038-h77eed37_0.json  font-ttf-ubuntu-0.83-h77eed37_3.json  fontconfig-2.15.0-h7e30c49_1.json  fonts-conda-ecosystem-1-0.json  gettext-0.22.5-he02047a_3.json  gettext-tools-0.22.5-he02047a_3.json  graphite2-1.3.13-h59595ed_1003.json  gst-plugins-base-1.24.7-h0a52356_0.json  harfbuzz-10.2.0-h4bba637_0.json  history  hyperframe-6.1.0-pyhd8ed1ab_0.json  icu-75.1-he02047a_0.json  krb5-1.21.3-h659f571_0.json  lame-3.100-h166bdaf_1003.json  ld_impl_linux-64-2.43-h712a8e2_2.json  lerc-4.0.0-h27087fc_0.json  libasprintf-devel-0.22.5-he8f35ee_3.json  libcblas-3.9.0-28_he106b2a_openblas.json  libclang13-19.1.7-default_h9c6a7e4_1.json  libcups-2.3.3-h4637d8d_4.json  libdeflate-1.23-h4ddbbb0_0.json  libdrm-2.4.124-hb9d3cd8_0.json  libedit-3.1.20250104-pl5321h7949ede_0.json  libegl-1.7.0-ha4b6fd6_2.json  libexpat-2.6.4-h5888daf_0.json  libgcc-14.2.0-h77fa898_1.json  (+57 more)
affinity_predictor/src/submodules/dna_positioning/pymol/condabin/: conda
(+394 files in other folders)
