[build-system]
requires = [ "setuptools",]
build-backend = "setuptools.build_meta"

[project]
requires-python = ">=3.9"
name = "affinity_predictor"
readme = "README.md"
dynamic = [ "version",]
dependencies = [
    "ipython>=8.10",
    "jupyterlab>=3.0",
    "notebook", 
    "kedro~=0.19.14",
    "tqdm",
    "biopython",
    "pandas",
    "numpy",
    "scikit-learn", ]

[project.scripts]
data-preparation = "affinity_predictor.__main__:main"

[tool.kedro]
package_name = "affinity_predictor"
project_name = "affinity_predictor"
kedro_init_version = "0.19.14"
tools = "['Custom Logging', 'Data Structure']"
example_pipeline = "False"
source_dir = "src"

[project.entry-points."kedro.hooks"]

[tool.setuptools.dynamic.version]
attr = "affinity_predictor.__version__"

[tool.setuptools.packages.find]
where = [ "src",]
namespaces = false

[tool.kedro_telemetry]
project_id = "b80e3331b6a14085905475c276dee745"
