[build-system]
requires = [ "setuptools",]
build-backend = "setuptools.build_meta"

[project]
requires-python = "==3.9.23"
name = "affinity_predictor"
readme = ""
dynamic = [ "version",]
dependencies = [
    "ipython>=8.10",
    "jupyterlab>=3.0",
    "notebook",
    "kedro~=0.19.14",
    "tqdm",
    "biopython==1.84",
    "pandas",
    "numpy==1.26.4",
    "scikit-learn",
    "tensorboard==2.18.0",
    "e3nn==0.5.1",
    "scipy==1.13.1",
    "rdkit-pypi==2022.9.5",
    "openbabel-wheel==3.1.1.20",
    "biotite==0.40.0",
    "atom3d",
    "wandb==0.18.2",
    "orjson",
    "umap-learn",
    "matplotlib",
    "seaborn",
    "plotly",
]

[project.scripts]
data-preparation = "affinity_predictor.__main__:main"

[tool.kedro]
package_name = "affinity_predictor"
project_name = "affinity_predictor"
kedro_init_version = "0.19.14"
tools = "['Custom Logging', 'Data Structure']"
example_pipeline = "False"
source_dir = "src"

[project.entry-points."kedro.hooks"]

[tool.setuptools.dynamic.version]
attr = "affinity_predictor.__version__"

[tool.setuptools.packages.find]
where = [ "src",]
namespaces = false

[tool.kedro_telemetry]
project_id = "b80e3331b6a14085905475c276dee745"
